# free-agent-gateway

./: .gitignore  ARCHITECTURE.md  CONFIG.md  Cargo.toml  LICENSE  README.en.md  README.md  README.zh-CN.md  RELEASE.md  ROADMAP.md  config.yaml.sample
.github/workflows/: linux-build.yml
docs/: adaptive-routing-rules.md  error-improvement-log.md  freeridev3-reference-analysis.md  key-availability-improvement-plan.md  key-availability-rules.md  reliable-key-routing-research.md
docs/features/: rate-tracking-context-handoff-vision.md
docs/skills/free-agent-gateway/: SKILL.md
docs/superpowers/plans/: 2026-06-25-key-model-capability-routing.md  2026-06-25-openai-api-reliability.md  2026-06-29-adaptive-model-routing.md
docs/superpowers/specs/: 2026-06-25-key-model-capability-routing-design.md  2026-06-25-openai-api-reliability-design.md  2026-06-29-adaptive-model-routing-design.md
scripts/: build-linux.sh  monitor-gateway.ps1
src/: config.rs  error.rs  lib.rs  main.rs  rate_rules.rs
src/adaptive/: mod.rs  observations.rs  profile.rs  scoring.rs
src/api/: adaptive.rs  admin.rs  admin_html.rs  chat.rs  compat.rs  mod.rs  models.rs  status.rs
src/health/: mod.rs
src/keyhub/: mod.rs
src/metadata/: learner.rs  mod.rs  sync.rs
src/models/: mod.rs
src/providers/: cloudflare.rs  github_models.rs  mod.rs  nvidia.rs  ollama.rs  openai_compatible.rs  traits.rs
src/router/: mod.rs
src/state/: mod.rs
src/watcher/: mod.rs
tests/: adaptive_routing_tests.rs  config_state_health_tests.rs  keyhub_tests.rs  metadata_learning_tests.rs  provider_tests.rs  router_tests.rs
web/admin/: package.json
web/admin/scripts/: build.mjs
web/admin/src/: app.js  index.html  styles.css  usage.js
web/admin/tests/: usage.test.mjs
